--- a/ex37/style.css
+++ b/ex37/style.css
@@ -9,6 +9,7 @@
     float: left;
     top: 60px;
     text-indent: 0px;
+    width:100%;
 }
 
 #container ul {
@@ -48,3 +49,4 @@
     width: 100%;
     border: 1px solid green;
 }
+
